Added some rudimentary notes to readme file